src/core/editor.scss
@use '../styles/variables';
@use '../styles/keyframe-animations';

.fsdx-editor-wrapper .tiptap.ProseMirror {
  font-family: "DM Sans", sans-serif;
  color: var(--fsdx-editor-text-primary);
}

.fsdx-editor-wrapper {
  overflow-wrap: break-word;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  background-color: var(--fsdx-editor-content-bg);

  &,
  *,
  ::before,
  ::after {
    box-sizing: border-box;
    transition: none var(--fsdx-editor-duration) var(--fsdx-editor-ease);
  }

  &::-webkit-scrollbar {
    width: var(--fsdx-editor-space-1);
  }

  * {
    scrollbar-width: thin;
    scrollbar-color: var(--fsdx-editor-content-scrollbar) transparent;
  }

  &::-webkit-scrollbar-thumb {
    background-color: var(--fsdx-editor-content-scrollbar);
    border-radius: var(--fsdx-editor-radius-full);
  }

  &::-webkit-scrollbar-track {
    background: transparent;
  }
}

.fsdx-editor-content {
  flex: 1;
  overflow: auto;
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  position: relative;
}

.fsdx-editor-content .tiptap.ProseMirror.editor {
  flex: 1;
  padding: var(--fsdx-editor-space-4);
}

.fsdx-editor-content > * {
  display: flex;
  flex-direction: column;
  min-height: 100%;
}

@media screen and (max-width: 480px) {
  .fsdx-editor-content .tiptap.ProseMirror.editor {
    padding: var(--fsdx-editor-space-4) var(--fsdx-editor-space-6) 30vh;
  }
}

